# Items_service

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.dev.yaml  pyproject.toml
src/items_app/: main.py
src/items_app/api/: providers.py  routers.py  schemas.py
src/items_app/api/providers/: current_user_provider.py  redis_providers.py  repo_providers.py  services_providers.py  session_provider.py
src/items_app/api/routers/: auth_routers.py  companies_routers.py  healthcheck_routers.py  items_routers.py
src/items_app/api/schemas/: auth_schemas.py  company_schemas.py  item_schemas.py
src/items_app/application/: application.py  application_exceptions.py
src/items_app/application/auth_applications/: auth_applications_exceptions.py  auth_applications_service.py  security.py
src/items_app/application/companies_applications/: companies_applications_exceptions.py  companies_applications_service.py
src/items_app/application/items_applications/: items_applications_exceptions.py  items_applications_service.py
src/items_app/application/users_applications/: users_applications_exceptions.py  users_cache_service.py  (+1 more)
src/items_app/infrastructure/: config.py  database.py  models.py  repository.py
src/items_app/migrations/: env.py
src/tests/: conftest.py
src/tests/integration/: conftest.py  test_companies_routers.py  test_healthcheck.py  test_items_routers.py
src/tests/items_app_tests/: test_main.py
src/tests/unit/: fixtures.py  test_aplication.py  test_async_cache_manager.py  test_company_applications.py  test_item_applications.py
(+16 files in other folders)
