[project]
name = "unittests"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.16.4",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "uvicorn>=0.35.0",
]

[build-system]
requires = ["setuptools==75.8.0"]
build-backend = "setuptools.build_meta"
