[project]
name = "items_service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.16.4",
    "asyncpg>=0.30.0",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "mypy>=1.17.1",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.10.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "python-jose>=3.5.0",
    "redis>=6.4.0",
    "ruff>=0.12.8",
    "uvicorn>=0.35.0",
]

[build-system]
requires = ["setuptools==75.8.0"]
build-backend = "setuptools.build_meta"
